Table ledgers {
  id bigint [pk]
  wallet_id bigint [not null]
  transaction_id bigint [not null]
  amount decimal(15, 2) [not null]
  initial_balance decimal(15, 2) [not null]
  updated_balance decimal(15, 2) [not null]
  created_at datetime [not null]
  updated_at datetime [not null]

  Indexes {
    transaction_id
    wallet_id amount
  }
}

Table transactions {
  id bigint [pk]
  source_wallet_id bigint
  target_wallet_id bigint
  amount decimal(15, 2) [not null]
  type string [not null]
  created_at datetime [not null]
  updated_at datetime [not null]

  Indexes {
    source_wallet_id type
    target_wallet_id type
    type
  }
}

Table user_sessions {
  id bigint [pk]
  user_id bigint [not null]
  session_id string [unique, not null]
  expired_at datetime [not null]
  enabled boolean [default: true, not null]
  created_at datetime [not null]
  updated_at datetime [not null]

  Indexes {
    session_id [unique]
    user_id enabled
  }
}

Table users {
  id bigint [pk]
  name string [not null]
  email string [unique, not null]
  password_digest string [not null]
  created_at datetime [not null]
  updated_at datetime [not null]

  Indexes {
    email [unique]
  }
}

Table wallets {
  id bigint [pk]
  user_id bigint [not null]
  balance decimal(10) [default: "0", not null]
  type string [not null]

  Indexes {
    user_id [unique]
  }
}

Ref: ledgers.wallet_id > wallets.id
Ref: ledgers.transaction_id > transactions.id
Ref: transactions.source_wallet_id > wallets.id
Ref: transactions.target_wallet_id > wallets.id
Ref: user_sessions.user_id > users.id
Ref: wallets.user_id > users.id
